--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,10 +1,11 @@
 .atf {
     width: 100vw;
-    // height: 100%;
-    height: 100vh;
-    // margin-top: 344px;
-    // margin-bottom: 200px;
-    padding-top: 214px;
+    // // height: 100%;
+    // height: 100vh;
+    // min-height: 1368px;
+    // // margin-top: 344px;
+    // // margin-bottom: 200px;
+    padding-top: 114px;
     display: flex;
     justify-content: center;
     scroll-margin-top: 114px;
@@ -15,21 +16,32 @@
     max-width: 1440px;
     // height: 100%;
     // max-height: 100vh;
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     // background-image: url('../../assets/img/atf-shape.svg');
     // background-size: cover;
     // background-position: center 144px;
     // background-repeat: no-repeat;
-    position: relative;
+    // position: relative;
     // overflow-x: clip;
 }
 
+.shape-div {
+    // position: absolute;
+    width: 100%;
+}
+
 .shape {
-    width: 100vw;
+    /* width: 100vw; */
+    width: 1440px;
+    height: 1080px;
     position: absolute;
-    bottom: -514px;
+    bottom: -333px;
     z-index: 1;
+    user-select: none;
+    // height: 1800px;
+    // width: 100vw;
+    // max-width: 1900px;
 }
 
 .shape-mobile {
@@ -40,14 +52,17 @@
 
 .atf-undersection {
     width: 100%;
-    // // position: relative;
+    height: 100vh;
+    min-height: 1000px;
+    max-height: 1368px;
+    position: relative;
 }
 
 .shadow {
     // width: 690px;
     // height: 671px;
     // max-width: 100%;
-    position: absolute;
+    // position: absolute;
     bottom: -37px;
     right: 616px;
     z-index: 0;
@@ -65,15 +80,26 @@
 }
 
 .atf-content {
+    // width: 100%;
+    // max-width: 100%;
+    // height: 100%;
+    // display: flex;
+    // flex-direction: row;
+    // align-items: center;
+    // justify-content: space-between;
+    // padding-left: 100px;
+    // position: relative;
+    // bottom: 168px;
     width: 100%;
-    max-width: 100%;
-    height: 100%;
+    position: absolute;
+    bottom: 300px;
+}
+
+.atf-title {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    // position: relative;
-    // bottom: 168px;
+    justify-content: space-between;
 }
 
 .photo-div {
@@ -84,40 +110,42 @@
     // background-position: -44px 112px;
     // background-repeat: no-repeat;
     z-index: 0;
-    position: relative;
+    // position: absolute;
     display: inline-block;
 }
 
-.photo-div::before {
-    content: "";
-    position: absolute;
-    top: -100px;
-    right: -400px;
-    bottom: -100px;
-    left: -400px;
-    background-image: url(/assets/img/shadows/photo-bgr.svg);
-    background-size: 1300px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    z-index: -1;
-    display: block;
-    pointer-events: none;
-}
+// .photo-div::before {
+//     content: "";
+//     // position: absolute;
+//     top: -100px;
+//     right: -400px;
+//     bottom: -100px;
+//     left: -400px;
+//     background-image: url(/assets/img/shadows/photo-bgr.svg);
+//     background-size: 1300px;
+//     background-repeat: no-repeat;
+//     background-position: 50% 50%;
+//     z-index: -1;
+//     display: block;
+//     pointer-events: none;
+// }
 
 .profile-img {
-    position: relative;
+    // position: relative;
     // left: 111px;
     bottom: 125px;
-    height: 965px;
+    height: 705px;
+    margin-left: 100px;
     z-index: -1;
     opacity: 1;
 }
 
 .right-section {
     text-align: center;
-    position: absolute;
-    right: 115px;
-    bottom: 633px;
+    // position: absolute;
+    // right: 115px;
+    // bottom: 633px;
+    margin-right: 150px;
     opacity: 0;
     z-index: 1;
 }
@@ -129,7 +157,8 @@
     align-items: center;
     justify-content: center;
     gap: 35px;
-    position: relative;
+    // position: relative;
+    left: 100px;
 }
 
 .button-div {
@@ -148,7 +177,7 @@
         color: white;
         cursor: pointer;
         transition: 125ms ease-out;
-        position: absolute;
+        // position: absolute;
 
         &:hover {
             padding: 20px 40px;
@@ -193,7 +222,9 @@
 }
 
 .atf-links {
-    position: relative;
+    width: 100%;
+    position: absolute;
+    bottom: 200px;
     z-index: 4;
 }
 
@@ -225,7 +256,7 @@
 
 .contact-div {
     display: flex;
-    position: relative;
+    // position: relative;
     bottom: 44px;
 }
 
@@ -281,12 +312,12 @@
 
     50% {
         right: -300px;
-        opacity: 0;
+        opacity: 1;
     }
 
     100% {
         right: 115px;
-        opacity: 0;
+        opacity: 1;
     }
 }
 
