--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="footer" id="footer">
-    <footer>
+<section>
+    <footer class="footer" id="footer">
         <div class="left-section">
             <a href="#atf"><img src="assets/img/logo.png" alt="Logo"></a>
             @if (languageService.language == 'English') {
@@ -17,4 +17,4 @@
             <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
         </div>
     </footer>
-</div>
+</section>
