--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -11,8 +11,15 @@
     }
 
     .atf-undersection {
-        // display: flex;
-        // justify-content: center;
+        // min-height: 1064px;
+        // max-height: 1368px;
+        // position: relative;
+    }
+
+    .atf-title {
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .shadow {
@@ -22,14 +29,14 @@
     }
 
     .shape {
-        // display: none;
-        width: 100%;
+        display: none;
     }
 
     .shape-mobile {
-        // display: block;
-        // position: absolute;
-        // bottom: -314px;
+        width: 100%;
+        display: block;
+        position: absolute;
+        bottom: -199px;
     }
 
     .atf-content {
@@ -38,33 +45,34 @@
     }
 
     .photo-div {
-        // display: flex;
-        // justify-content: center;
+        display: flex;
+        justify-content: center;
+        position: relative;
         // height: unset;
     }
 
     .profile-img {
-        // height: 377px;
-        // left: unset;
-        // bottom: 387px;
+        height: 1024px;
     }
 
     .right-section {
-        // position: unset;
+        margin-right: unset;
     }
 
     .title-content {
 
     }
 
-    .right-section {
-
-    }
-
     .contact-div {
-        left: 0;
+        // left: 0;
     }
 
+    .profile-img {
+        height: 634px;
+        position: absolute;
+        bottom: -118px;
+        margin-left: unset;
+    }
 
 }
 
@@ -79,6 +87,10 @@
 
     .scroll-div {
         // display: none;
+    }
+
+    .profile-img {
+        height: 705px;
     }
 }
 
@@ -215,6 +227,10 @@
     }
 }
 
+@media screen and (min-height: 0px) and (max-width: 1440px) {
+
+}
+
 
 @media screen and (max-height: 1010px) and (max-width: 1440px) {
     .right-section {
@@ -226,6 +242,27 @@
     }
 }
 
+@media screen and (max-height: 950px) {
+    .profile-img {
+        height: 505px;
+    }
+
+    .right-section {
+        bottom: 44px;
+        margin-right: 255px;
+    }
+
+    .atf-undersection {
+
+    }
+}
+
+@media screen and (min-height: 950px) and (max-height: 1150px) {
+    .profile-img {
+        height: 704px;
+    }
+}
+
 @media screen and (min-height: 1050px) {
     .atf-undersection {
 
@@ -233,13 +270,6 @@
 }
 
 @media screen and (min-height: 1250px) {
-    .profile-img {
-        height: 1005px;
-    }
-
-    .right-section {
-        margin-right: 50px;
-    }
 
     .atf-undersection {
 
@@ -252,9 +282,9 @@
     }
 }
 
-@media screen and (max-width: 1440px) {
-    .atf-undersection {
+@media screen and (max-width: 1440px) and (max-width: 1440px) {
 
-    }
 }
+
+
 
