--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -68,10 +68,11 @@
                         </div>
                     </div>
                     <div class="shadow-1"></div>
-                    <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
+                    <!-- <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1"> -->
                 </div>
             </div>
             <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
+            <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile" draggable="false">  
         </div>
     </div>
 </div>
