--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -53,7 +53,7 @@
 .atf-undersection {
     width: 100%;
     height: 100vh;
-    min-height: 1000px;
+    min-height: 800px;
     max-height: 1368px;
     position: relative;
 }
@@ -75,9 +75,7 @@
     z-index: -1;
 }
 
-.shadow-1:before {
-
-}
+.shadow-1:before {}
 
 .atf-content {
     // width: 100%;
@@ -134,7 +132,7 @@
     // position: relative;
     // left: 111px;
     bottom: 125px;
-    height: 705px;
+    height: 905px;
     margin-left: 100px;
     z-index: -1;
     opacity: 1;
@@ -143,11 +141,10 @@
 .right-section {
     text-align: center;
     // position: absolute;
-    // right: 115px;
-    // bottom: 633px;
+    position: relative;
     margin-right: 150px;
     opacity: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .title-div {
@@ -224,7 +221,7 @@
 .atf-links {
     width: 100%;
     position: absolute;
-    bottom: 200px;
+    bottom: 164px;
     z-index: 4;
 }
 
@@ -316,7 +313,7 @@
     }
 
     100% {
-        right: 115px;
+        right: 0px;
         opacity: 1;
     }
 }
