--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -1,19 +1,6 @@
 @media screen and (max-width: 1440px) {
-    .atf {
-        // margin-top: 388px;
-        // opacity: 0;
-    }
-
     .atf-section {
-        // max-width: 1440px;
-        // background-image: url('../../assets/img/atf-shape-mobile.svg');
-        // overflow-x: clip;
-    }
-
-    .atf-undersection {
-        // min-height: 1064px;
-        // max-height: 1368px;
-        // position: relative;
+        max-width: 1440px;
     }
 
     .atf-title {
@@ -33,42 +20,38 @@
     }
 
     .shape-mobile {
-        width: 100%;
+        width: 1440px;
         display: block;
         position: absolute;
+        left: 0;
         bottom: -199px;
     }
 
     .atf-content {
-        // flex-direction: column;
-        // justify-content: space-around;
+        height: 70%;
+        bottom: 360px;
     }
 
     .photo-div {
         display: flex;
         justify-content: center;
         position: relative;
-        // height: unset;
-    }
-
-    .profile-img {
-        height: 1024px;
     }
 
     .right-section {
         margin-right: unset;
+        bottom: -100px;
+    }
+
+    .title-div {
+        gap: 22px
     }
 
     .title-content {
-
-    }
-
-    .contact-div {
-        // left: 0;
+        margin-left: 32px;
     }
 
     .profile-img {
-        height: 634px;
         position: absolute;
         bottom: -118px;
         margin-left: unset;
@@ -78,212 +61,121 @@
 
 @media screen and (max-width: 1024px) {
     .atf-section {
-        // max-width: 1024px;
+        max-width: 1024px;
     }
 
     .mail-div {
-        // display: none;
+        display: none;
     }
 
     .scroll-div {
-        // display: none;
-    }
-
-    .profile-img {
-        height: 705px;
+        display: none;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .atf {
-        // margin-top: 188px;
+    .atf-section {
+        max-width: 768px;
     }
 
-    .atf-section {
-        // max-width: 768px;
+    .atf-undersection {
+        min-height: 710px;
     }
 
     .mail-div {
-        // display: none;
+        display: none;
     }
 
     .title-name {
-        // font-size: 28px;
-        // line-height: 28px;
+        font-size: 28px;
+        line-height: 28px;
     }
 
     .title-profession {
-        // font-size: 29px;
-        // line-height: 28.6px;
+        font-size: 29px;
+        line-height: 28.6px;
     }
 
     .iam {
-        // top: 36px;
-        // right: 166px;
-        // font-size: 24px;
+        top: 36px;
+        right: 42px;
+        font-size: 24px;
     }
 
     .ichbin {
-        // top: 38px;
-        // right: 165px;
-        // font-size: 15px;
-    }
-
-    .title-content {
-        // left: 8px;
-    }
-
-    .profile-img {
-        // top: 100px;
-        // height: 335px;
-    }
-
-    .right-section {
-        // top: 100px;
-    }
-
-    .contact-div {
-        // bottom: 32px;
+        top: 38px;
+        right: 38px;
+        font-size: 15px;
     }
 
     .title-div {
-        // width: 100%;
-        // gap: 22px;
 
         button {
-            // font-size: 16px;
-            // line-height: 19.2px;
+            font-size: 16px;
+            line-height: 19.2px;
         }
     }
 
     .border {
-        // width: 64px;
+        width: 64px;
+    }
+
+    .shape-mobile {
+        bottom: -269px;
     }
 }
 
 @media screen and (max-width: 425px) {
     .atf-section {
-        // max-width: 768px;
+        max-width: 425px;
     }
 
 }
 
 @media screen and (max-width: 375px) {
     .atf-section {
-        // max-width: 375px;
+        max-width: 375px;
     }
 
-    .profile-img {
-        // top: 132px;
-        // height: 254px;
+    .atf-title {
+        height: 96%;
     }
 
     .title-name {
-        // font-size: 22px;
-        // line-height: 22px;
+        font-size: 22px;
+        line-height: 22px;
     }
 
     .title-profession {
-        // font-size: 22.6px;
-        // line-height: 22px;
+        font-size: 22.6px;
+        line-height: 22px;
     }
 
     .iam {
-        // top: 31px;
-        // right: 130px;
-        // font-size: 18px;
+        top: 31px;
+        right: 30px;
+        font-size: 18px;
     }
 
     .ichbin {
-        // top: 32px;
-        // right: 129px;
-        // font-size: 11px;
+        top: 32px;
+        right: 29px;
+        font-size: 11px;
     }
 
     .contact-section {
-        // gap: 22px;
+        gap: 22px;
     }
 
     .socialmedia-btns {
-        // gap: 32px;
-    }
-
-    .right-section {
-        // top: 132px;
-    }
-
-    .contact-div {
-        // bottom: 0;
+        gap: 32px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .atf-section {
-        // max-width: 1024px;
+        max-width: 320px;
     }
-
-    .profile-img {
-        // top: 116px;
-    }
-}
-
-@media screen and (min-height: 0px) and (max-width: 1440px) {
-
-}
-
-
-@media screen and (max-height: 1010px) and (max-width: 1440px) {
-    .right-section {
-
-    }
-
-    .contact-div {
-
-    }
-}
-
-@media screen and (max-height: 950px) {
-    .profile-img {
-        height: 505px;
-    }
-
-    .right-section {
-        bottom: 44px;
-        margin-right: 255px;
-    }
-
-    .atf-undersection {
-
-    }
-}
-
-@media screen and (min-height: 950px) and (max-height: 1150px) {
-    .profile-img {
-        height: 704px;
-    }
-}
-
-@media screen and (min-height: 1050px) {
-    .atf-undersection {
-
-    }
-}
-
-@media screen and (min-height: 1250px) {
-
-    .atf-undersection {
-
-    }
-}
-
-@media screen and (min-height: 1900px) {
-    .atf-undersection {
-
-    }
-}
-
-@media screen and (max-width: 1440px) and (max-width: 1440px) {
-
 }
 
 
