--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,47 +1,30 @@
 .atf {
     width: 100vw;
-    // // height: 100%;
-    // height: 100vh;
-    // min-height: 1368px;
-    // // margin-top: 344px;
-    // // margin-bottom: 200px;
-    padding-top: 114px;
     display: flex;
     justify-content: center;
     scroll-margin-top: 114px;
+    padding-top: 114px;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .atf-section {
     width: 100%;
     max-width: 1440px;
-    // height: 100%;
-    // max-height: 100vh;
-    // display: flex;
-    // justify-content: center;
-    // background-image: url('../../assets/img/atf-shape.svg');
-    // background-size: cover;
-    // background-position: center 144px;
-    // background-repeat: no-repeat;
-    // position: relative;
     // overflow-x: clip;
 }
 
 .shape-div {
-    // position: absolute;
     width: 100%;
 }
 
 .shape {
-    /* width: 100vw; */
     width: 1440px;
     height: 1080px;
     position: absolute;
     bottom: -333px;
     z-index: 1;
     user-select: none;
-    // height: 1800px;
-    // width: 100vw;
-    // max-width: 1900px;
 }
 
 .shape-mobile {
@@ -75,64 +58,32 @@
     z-index: -1;
 }
 
-.shadow-1:before {}
-
 .atf-content {
-    // width: 100%;
-    // max-width: 100%;
-    // height: 100%;
-    // display: flex;
-    // flex-direction: row;
-    // align-items: center;
-    // justify-content: space-between;
-    // padding-left: 100px;
-    // position: relative;
-    // bottom: 168px;
     width: 100%;
+    height: 64%;
     position: absolute;
     bottom: 300px;
 }
 
 .atf-title {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 35px;
 }
 
 .photo-div {
-    // width: 100%;
-    // height: 100%;
-    // background-image: url(../../assets/img/shadows/photo-bgr.svg);
-    // background-size: contain;
-    // background-position: -44px 112px;
-    // background-repeat: no-repeat;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
     z-index: 0;
-    // position: absolute;
-    display: inline-block;
 }
 
-// .photo-div::before {
-//     content: "";
-//     // position: absolute;
-//     top: -100px;
-//     right: -400px;
-//     bottom: -100px;
-//     left: -400px;
-//     background-image: url(/assets/img/shadows/photo-bgr.svg);
-//     background-size: 1300px;
-//     background-repeat: no-repeat;
-//     background-position: 50% 50%;
-//     z-index: -1;
-//     display: block;
-//     pointer-events: none;
-// }
-
 .profile-img {
-    // position: relative;
-    // left: 111px;
-    bottom: 125px;
-    height: 905px;
+    height: 100%;
     margin-left: 100px;
     z-index: -1;
     opacity: 1;
@@ -140,9 +91,8 @@
 
 .right-section {
     text-align: center;
-    // position: absolute;
     position: relative;
-    margin-right: 150px;
+    margin-right: 100px;
     opacity: 0;
     z-index: 2;
 }
@@ -155,7 +105,7 @@
     justify-content: center;
     gap: 35px;
     // position: relative;
-    left: 100px;
+    // left: 100px;
 }
 
 .button-div {
@@ -254,7 +204,7 @@
 .contact-div {
     display: flex;
     // position: relative;
-    bottom: 44px;
+    // bottom: 44px;
 }
 
 .contact-section {
