--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -9,7 +9,9 @@
             <div class="atf-content">
                 <div class="atf-title">
                     <div class="photo-div">
-                        <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                        <div class="img-block">
+                            <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                        </div>
                     </div>
                     <div class="right-section" [class.animationSlideInRight]="isVisible">
                         <div class="title-div">
