--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -60,7 +60,7 @@
 
 .atf-content {
     width: 100%;
-    height: 75%;
+    height: 65%;
     position: absolute;
     bottom: 250px;
 }
@@ -72,20 +72,42 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: 88px;
+    gap: 35px;
 }
 
 .photo-div {
     height: 100%;
     display: flex;
     align-items: flex-end;
-    z-index: 0;
+    // z-index: 0;
+}
+
+.img-block {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    margin-left: 100px;
 }
 
 .profile-img {
     height: 100%;
-    margin-left: 100px;
-    z-index: -1;
+    position: relative;
+    z-index: 1;
+    opacity: 1;
+    object-fit: cover;
+}
+
+.img-block::after {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    height: 100%;
+    width: 100%;
+    background: url('../../assets/img/piri-layer.png') no-repeat;
+    background-size: cover;
+    pointer-events: none;
+    z-index: 2;
     opacity: 1;
 }
 
