--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -40,6 +40,12 @@
         margin-left: unset;
     }
 
+    .shadow {
+        width: unset;
+        top: 47px;
+        left: -234px;
+    }
+
     .right-section {
         margin-right: unset;
         bottom: -118px;
@@ -126,6 +132,10 @@
 
     .shape-mobile {
         bottom: -325px;
+    }
+
+    .shadow {
+        top: 147px;
     }
 }
 
