--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,16 +1,14 @@
-<!-- <div class="shape-div">
-    <img src="assets/img/atf-shape.svg" alt="Shape" class="shape">
-    <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile">    
-</div> -->
 <div id="atf" class="atf">
     <div class="atf-section">
         <div class="atf-undersection">
-            <!-- <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow"> -->
             <div class="atf-content">
                 <div class="atf-title">
                     <div class="photo-div">
                         <div class="img-block">
                             <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                        </div>
+                        <div class="shadow-block">
+                            <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
                         </div>
                     </div>
                     <div class="right-section" [class.animationSlideInRight]="isVisible">
@@ -57,7 +55,7 @@
                         <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.ch</a>
                     </div>
                 </div>
-                <div>
+                <div class="scroll-shadow-div">
                     <div class="scroll-div" [class.animationOscillation]="isVisible">
                         <div class="scroll-section">
                             @if (languageService.language == 'English') {
@@ -69,8 +67,9 @@
                             <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
                         </div>
                     </div>
-                    <div class="shadow-1"></div>
-                    <!-- <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1"> -->
+                    <div class="shadow-1">
+                        <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1-img">
+                    </div>
                 </div>
             </div>
             <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
