--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <div class="privacy-policy">
     <div class="privacy-policy-content">
-        <a href="/#contact"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
+        <a href="/#contact" class="arrow-div"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
                 [src]="hover ? '../../assets/img/arrow-blue.svg' : '../../assets/img/arrow-default.svg'" alt="Back Home"
                 class="arrow"></a>
         @if (languageService.language == 'English') {
