--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,6 @@
 <div class="imprint">
     <div class="imprint-content">
-        <a href="/"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
+        <a href="/" class="arrow-div"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
                 [src]="hover ? '../../assets/img/arrow-blue.svg' : '../../assets/img/arrow-default.svg'" alt="Back Home"
                 class="arrow"></a>
         @if (languageService.language == 'English') {
