--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -3,17 +3,19 @@
     display: flex;
     justify-content: center;
     width: 100vw;
+    margin-top: 114px;
 }
 
 .privacy-policy-content {
     width: 100%;
     max-width: 1440px;
     height: 100%;
-    padding: 100px;
+    padding: 37px 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 35px;
+    position: relative;
     // overflow-x: clip;
     // background-image: url(../../assets/img/shadows/imprint.svg);
     // background-repeat: no-repeat;
@@ -26,29 +28,34 @@
     }
 }
 
+.arrow-div {
+    position: absolute;
+    top: 37px;
+    right: 116px;
+}
+
 .arrow {
     width: 39px;
     height: 39px;
-    position: relative;
-    top: 85px;
-    left: 1209px;
     transform: rotate(270deg);
     transition: 125ms ease-in-out;
 }
 
+@media screen and (max-width: 1024px) {
+    .privacy-policy-content {
+        padding: 37px 50px;
+    }
+
+    .arrow-div {
+        right: 66px;
+    }
+}
+
 @media screen and (max-width: 390px) {
     .privacy-policy-content {
-        padding: 100px 25px;
 
         p {
             margin-bottom: unset;
         }
-    }
-
-    .arrow {
-        position: absolute;
-        top: 34px;
-        left: unset;
-        right: 32px;
     }
 }
