--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -7,13 +7,14 @@
     bottom: 0;
     left: 0;
     z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     background-color: rgba(20, 29, 47, 0.8);
 }
 
 .burger-menu-content {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,8 +22,15 @@
 }
 
 .header-links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.header-links-content {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 29px;
 
     a {
@@ -50,4 +58,56 @@
     p {
         color: var(--light-blue);
     }
+}
+
+.language-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.language-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    position: absolute;
+    bottom: 48px;
+
+    p {
+        font-size: 12px;
+        line-height: 12px;
+    }
+}
+
+.language-icon {
+    width: 16px;
+    height: 16px;
+    // width: 27.6px;
+    // height: 27.6px;
+}
+
+.languageSelection-content {
+    display: flex;
+    gap: 8px;
+}
+
+.languageSelection-text {
+    display: flex;
+
+    a {
+        font-size: 12px;
+        line-height: 12px;
+    }
+}
+
+.blue {
+
+    a {
+        color: var(--light-blue);
+    }
+}
+
+.language-icon-active path {
+    fill: var(--light-blue);
 }
