--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 section {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     border-top: 4px solid var(--light-blue);
