--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,7 +4,7 @@ section {
     right: 0;
     left: 0;
     z-index: 5;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     background-color: var(--dark-blue);
