--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,8 +81,8 @@ body {
     background-color: var(--dark-blue);
     position: absolute;
     overflow-x: hidden;
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
 }
 
 h2 {
