--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -116,7 +116,6 @@
 .right-section {
     text-align: center;
     position: relative;
-    opacity: 0;
     z-index: 2;
 }
 
@@ -165,6 +164,12 @@
 .verticalText {
     position: relative;
     transform: rotate(270deg);
+    opacity: 0;
+}
+
+.title-name {
+    position: relative;
+    opacity: 0;
 }
 
 .iam {
@@ -184,6 +189,7 @@
     line-height: 69.6px;
     color: var(--purple);
     margin: 0;
+    opacity: 0;
 }
 
 .border {
@@ -236,6 +242,8 @@
     justify-content: center;
     align-items: center;
     gap: 42px;
+    position: relative;
+    opacity: 0;
 }
 
 .scroll-div {
@@ -267,14 +275,35 @@
 }
 
 .animationSlideInRight {
-    animation: slideInRightTitle 1250ms linear forwards;
+    animation: slideInRight 1250ms linear forwards;
 }
 
 .animationOscillation {
-    animation: oscillation 700ms infinite;
+    animation: popup 700ms, oscillation 700ms infinite 1s;
 }
 
-@keyframes slideInRightTitle {
+.animationSlideInLeft {
+    animation: slideInLeft 1250ms linear forwards;
+}
+
+.animationRotation {
+    animation: 
+        rotation 1s .8s linear forwards;
+}
+
+.typewriter {
+    overflow: hidden;
+    border-right: 4px solid var(--light-blue);
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: auto;
+    animation:
+        typing 2.5s .5s steps(40, end),
+        blink-caret .75s .5s step-end infinite,
+        stop-caret 0s 3.2s forwards;
+}
+
+@keyframes slideInRight {
     0% {
         right: -700px;
         opacity: 0;
@@ -312,3 +341,77 @@
         bottom: 112px;
     }
 }
+
+@keyframes slideInLeft {
+    0% {
+        left: -700px;
+        opacity: 0;
+    }
+
+    50% {
+        left: -300px;
+        opacity: 1;
+    }
+
+    100% {
+        left: 0px;
+        opacity: 1;
+    }
+}
+
+@keyframes popup {
+    0% {
+        transform: scale(0);
+    }
+
+    50% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes typing {
+    from {
+        width: 0%;
+        opacity: 1;
+    }
+
+    to {
+        width: 100%;
+        opacity: 1;
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+        opacity: 1;
+    }
+
+    50% {
+        border-color: var(--light-blue);
+    }
+}
+
+@keyframes stop-caret {
+    from, to {
+        border-color: transparent;
+        opacity: 1;
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg); 
+        opacity: 1;
+    }
+
+    to {
+        transform: rotate(270deg); 
+        opacity: 1;
+    }
+}
+
