--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="go-up">
-            <a href="#atf" class="go-up-btn"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
+            <a href="#atf" class="go-up-btn" [class.animationOscillation]="isVisible"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
                     [src]="hover ? 'assets/img/go-up-btn-hover.svg' : 'assets/img/go-up-btn.svg'" alt="Go up"></a>
         </div>
     </div>
