--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,4 +1,5 @@
 <div id="atf" class="atf">
+    <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
     <div class="atf-section">
         <div class="atf-undersection">
             <div class="atf-content">
@@ -72,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
+            <!-- <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false"> -->
             <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile" draggable="false">  
         </div>
     </div>
