--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,5 +1,7 @@
 <div id="atf" class="atf">
-    <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
+    <div class="shape-content">
+        <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false">
+    </div>
     <div class="atf-section">
         <div class="atf-undersection">
             <div class="atf-content">
