--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -9,6 +9,13 @@
     position: relative;
 }
 
+.shape-content {
+    width: 100vw;
+    max-width: 2876px;
+    position: absolute;
+    z-index: 1;
+} 
+
 .atf-section {
     width: 100%;
     max-width: 1440px;
@@ -20,16 +27,22 @@
 }
 
 .shape {
-    width: 100vw;
-    min-width: 1440px;
-    max-width: 2000px;
+    width: 100%;
+    position: relative;
+    bottom: -515px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+    // width: 100vw;
+    // min-width: 1440px;
+    // max-width: 2000px;
     // width: 1440px;
     // height: 1080px;
-    position: absolute;
-    bottom: -34%;
+    // position: absolute;
+    // bottom: -34%;
     // bottom: -400px;
-    z-index: 1;
-    user-select: none;
+    // z-index: 1;
+    // user-select: none;
 }
 
 .shape-mobile {
@@ -88,7 +101,7 @@
     height: 100%;
     position: relative;
     z-index: 1;
-    opacity: 0; // temporarly 
+    opacity: 1;
     object-fit: cover;
 }
 
